--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,10 @@
     </section>
     <section class="footer">
         <h4>About Us</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Sint nemo atque ut at nulla nostrum?</p>
+        <p>We aim to help businesses streamline their operations, reduce waste, and enhance productivity, 
+            <br>while ensuring
+            seamless integration of digital solutions into their existing workflows. </p>
+            <footer class="foot">&copy; This is developed and designed by Omega Info Tech . All rights reserved. </footer>
     </section>
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
