--- a/ArticlesAi.html
+++ b/ArticlesAi.html
@@ -31,9 +31,7 @@
         <header>
 
 
-            <a href="" class="logo">
-                <img src="images/logo.png" alt="Logo">
-            </a>
+            
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar">Menu
             </label>
@@ -42,10 +40,10 @@
                     <li><a href="AiGuru-Homepage.html">HOME</a></li>
                     <li><a href="#">AI TECHNOLOGY GURU</a>
                         <ul>
-                            <li><a href="WAi.html">AI</a></li>
+                            <li><a href="WAi.html">Artificial Intelligence</a></li>
                             <li><a href="Techno.html">Technologies</a></li>
                             <li><a href="WhyAi.html">Why</a></li>
-                            <li><a href="HowAi.html">How</a></li>
+                            <li><a href="HowAi.html">Implementation</a></li>
                             <li><a href="ArticlesAi.html">Articles</Article></a></li>
                         </ul>
                     </li>
