--- a/implementation.html
+++ b/implementation.html
@@ -31,9 +31,7 @@
         <header>
 
 
-            <a href="" class="logo">
-                <img src="images/logo.png" alt="Logo">
-            </a>
+           
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar">Menu
             </label>
@@ -42,10 +40,10 @@
                     <li><a href="AiGuru-Homepage.html">HOME</a></li>
                     <li><a href="#">AI TECHNOLOGY GURU</a>
                         <ul>
-                            <li><a href="WAi.html">AI</a></li>
+                            <li><a href="WAi.html">Artificial Intelligence</a></li>
                             <li><a href="Techno.html">Technologies</a></li>
                             <li><a href="WhyAi.html">Why</a></li>
-                            <li><a href="HowAi.html">How</a></li>
+                            <li><a href="HowAi.html">Implementation</a></li>
                             <li><a href="ArticlesAi.html">Articles</Article></a></li>
                         </ul>
                     </li>
@@ -66,7 +64,7 @@
             <div class="theory">
                 <h1>How can we accomplish AI Technology</h1>
 
-                <p>1. AI Application in E-Commerce
+                <p><b>1. AI Application in E-Commerce </b>
                     <br>
                     <br>
                     Personalized Shopping:
@@ -84,7 +82,7 @@
                     <br>
                     <br>
                     <br>
-                <p>2. Applications Of Artificial Intelligence in Education
+                <p><b>2. Applications Of Artificial Intelligence in Education </b>
                     <br>
                     <br>
                     Although the education sector is the one most influenced by humans, Artificial Intelligence has slowly begun to seep its roots into the education sector as well. Even in the education sector, this slow transition of Artificial Intelligence has helped increase productivity among faculties and helped them concentrate more on students than office or administration work.
