--- a/WhyAi.html
+++ b/WhyAi.html
@@ -31,9 +31,7 @@
         <header>
 
 
-            <a href="" class="logo">
-                <img src="images/logo.png" alt="Logo">
-            </a>
+           
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar">Menu
             </label>
@@ -42,10 +40,10 @@
                     <li><a href="AiGuru-Homepage.html">HOME</a></li>
                     <li><a href="#">AI TECHNOLOGY GURU</a>
                         <ul>
-                            <li><a href="WAi.html">AI</a></li>
+                            <li><a href="WAi.html">Artificial Intelligence</a></li>
                             <li><a href="Techno.html">Technologies</a></li>
                             <li><a href="WhyAi.html">Why</a></li>
-                            <li><a href="HowAi.html">How</a></li>
+                            <li><a href="HowAi.html">Implementation</a></li>
                             <li><a href="ArticlesAi.html">Articles</Article></a></li>
                         </ul>
                     </li>
@@ -87,7 +85,7 @@
                 </section>
                 <section>
                     <h3>Introduction to Artificial Intelligence</h3>
-                    <video src="videos/AI video.mp4" controls autoplay></video>
+                    <video src="videos/AI video.mp4" controls ></video>
                 </section>
                 <section class="Industrial" id="industrial">
                     <h3>Indusrial Revolution 4.0</h3>
@@ -198,9 +196,10 @@
         <p>We aim to help businesses streamline their operations, reduce waste, and enhance productivity, <br> while
             ensuring
             seamless integration of digital solutions into their existing workflows.
-            <br>&copy; Developed and designed by Omega Info Tech . All rights reserved.
+            
         </p>
     </footer>
+    <footer class="foot">&copy; This is developed and designed by Omega Info Tech . All rights reserved. </footer>
 
 
 
