--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,7 @@
         <header>
 
 
-            <a href="" class="logo">
-                <img src="logo.png" alt="Logo">
-            </a>
+
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar">Menu
             </label>
@@ -44,10 +42,10 @@
                     <li><a href="AiGuru-Homepage.html">HOME</a></li>
                     <li><a href="#">AI TECHNOLOGY GURU</a>
                         <ul>
-                            <li><a href="WAi.html">AI</a></li>
+                            <li><a href="WAi.html">Artificial Intelligence</a></li>
                             <li><a href="Techno.html">Technologies</a></li>
                             <li><a href="WhyAi.html">Why</a></li>
-                            <li><a href="HowAi.html">How</a></li>
+                            <li><a href="HowAi.html">Implementation</a></li>
                             <li><a href="ArticlesAi.html">Articles</Article></a></li>
                         </ul>
                     </li>
@@ -64,7 +62,8 @@
     <section class="contact">
         <div class="content">
             <h2>Contact Us</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem vero, nemo dicta explicabo fuga et.
+            <p>We aim to help businesses streamline their operations, reduce waste, and enhance productivity, while
+                ensuring seamless integration of digital solutions into their existing workflows.
             </p>
         </div>
         <div class="container">
@@ -95,7 +94,7 @@
                 </div>
             </div>
             <div class="contactform">
-                <form>
+                <form id="contactForm" action="https://formsubmit.co/omegainfotechsolutions@gmail.com" method="POST">
                     <h2>Send Message</h2>
                     <div class="inputbox">
                         <input type="text" id="Name" required="required">
@@ -118,33 +117,12 @@
     </section>
     <section class="footer">
         <h4>About Us</h4>
-        <p>We aim to help businesses streamline their operations, reduce waste, and enhance productivity, 
+        <p>We aim to help businesses streamline their operations, reduce waste, and enhance productivity,
             <br>while ensuring
-            seamless integration of digital solutions into their existing workflows. </p>
-            <footer class="foot">&copy; This is developed and designed by Omega Info Tech . All rights reserved. </footer>
+            seamless integration of digital solutions into their existing workflows.
+        </p>
+
     </section>
-    <script src="https://smtpjs.com/v3/smtp.js">
-    </script>
-    <script>
-        function Send(){
-            var name=document.getElementById("Name").value;
-            var email=document.getElementById("Email").value;
-            var mess=document.getElementById("message").value;
-
-            console.lo("function call");
-            Email.send({
-            Host : "smtp.elasticemail.com",
-            Username : "username",
-            Password : "password",
-            To : 'them@website.com',
-            From : "you@isp.com",
-            Subject : "This is the subject",
-            Body : "And this is the body"
-        }).then(
-        message => alert(message)
-        );
-        }
-    </script>
 
 
 
@@ -153,7 +131,8 @@
 
 
 
-    <footer class="foot">&copy; This is developed by Omega Info Tech . All rights reserved. </footer>
+
+    <footer class="foot">&copy; This is developed and designed by Omega Info Tech . All rights reserved. </footer>
 
 
 
